[package]
name = "transmisson-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.21.0"
serde = "1.0.163"
serde_json = "1.0.96"
simple_logger = "4.1.0"
tokio = { version="1.28.1", features=["full"] }
elva-byra-scale = { path = "../elva-byra-scale" }
config = "0.13.3"
log = "0.4.17"
