[package]
name = "elva-byra-scale"
version = "0.1.0"
edition = "2021"

[lib]
name="elva_byra_lib"

[dependencies]
chrono = { version ="0.4.24", features= ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
config = "0.13.3"
log = "0.4.17"
rppal = { version = "0.14.1" }
serde = "1.0.158"
simple_logger = "4.1.0"
